--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
@@ -24,83 +24,86 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-<div>
-    <h4>Detalles de Usuario</h4>
-    <hr />
-    <div class="elementoModificar" style="display:none">
-        <dl class="dl-horizontal">
+    <div class="form-horizontal">
+        <h4>Detalles de Usuario</h4>
+        <hr />
 
-@*Nombre Modificar*@            
-                    <div class="form-group">
-                        <dt>Nombre </dt>                  
-                            @Html.EditorFor(model => model.modeloUsuario.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.modeloUsuario.nombre, "", new { @class = "text-danger" })                       
-                    </div>
-
-
-@*Apellidos Modificar*@
-
-                    <div class="form-group">
-                        <dt>Apellidos </dt>  
-                            @Html.EditorFor(model => model.modeloUsuario.apellidos, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.modeloUsuario.apellidos, "", new { @class = "text-danger" })
-                    </div>
+        <div class="elementoModificar" style="display:none">
+            <div class="col-lg-2 col-lg-push-6">
+                <a class="btn btn-danger" id='@(Model.modeloUsuario.cedula)' onclick="borrar(this)">Eliminar</a>
+            </div><br/>
+             <dl class="dl-horizontal">
+             @*Cedula Modificar*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
+                </div>
 
 
-@*Cedula Modificar*@
-                    <div class="form-group">
-                        <dt>Cedula </dt>  
-                            @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
-                    </div>
+                @*Nombre Modificar*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.nombre, "", new { @class = "text-danger" })
+                </div>
 
 
-@*Correo Modificar*@
-                    <div class="form-group">
-                        <dt>Correo </dt>  
-                            @Html.EditorFor(model => model.modeloUsuario.correo, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.modeloUsuario.correo, "", new { @class = "text-danger" })
-                    </div>
+                @*Apellidos Modificar*@
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.apellidos, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.apellidos, "", new { @class = "text-danger" })
+                </div>
 
 
-@*Telefono 1 Modificar*@
-                    <div class="form-group">
-                        <dt>Telefono </dt>  
-                            @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.modeloUsuario.Telefono, "", new { @class = "text-danger" })
-                    </div>
-                                 
+                @*Correo Modificar*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.correo, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.correo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.correo, "", new { @class = "text-danger" })
+                </div>
 
-@*Telefono 2 Modificar*@
-                    <div class="form-group">
-                        <dt>Telefono </dt>  
-                            @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.modeloTelefono2.numero, "", new { @class = "text-danger" })
-                    </div>
-@*Proyecto Modificar, no implementado en este sprint*@
-            <div class="form-group">
-                <dt>Proyecto </dt>
-                @Html.EditorFor(model => model.modeloProyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.modeloProyecto.nombre, "", new { @class = "text-danger" })
-            </div>
 
-@*id usuario no editable, oculto*@
+                @*Telefono 1 Modificar*@
+                <div class="form-group">
+                   <label class="control-label col-md-2">Telefono 1:</label>
+                    @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.Telefono, "", new { @class = "text-danger" })
+                </div>
+
+
+                @*Telefono 2 Modificar*@
+                <div class="form-group">
+                    <label class="control-label col-md-2">Telefono 2:</label>
+                    @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloTelefono2.numero, "", new { @class = "text-danger" })
+                </div>
+                @*Proyecto Modificar, no implementado en este sprint*@
+                <div class="form-group" style="display:none">
+                    <dt>Proyecto </dt>
+                    @Html.EditorFor(model => model.modeloProyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloProyecto.nombre, "", new { @class = "text-danger" })
+                </div>
+
+                @*id usuario no editable, oculto*@
                 <div class="form-group" style="display:none">
                     @Html.LabelFor(model => model.modeloUsuario.id, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.modeloUsuario.id, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.modeloUsuario.id, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.modeloUsuario.id, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.id, "", new { @class = "text-danger" })
                 </div>
 
 
-@*Lider usuario no editable, oculto*@
-                <div class="form-group"style="display:none">
+                @*Lider usuario no editable, oculto*@
+                <div class="form-group" style="display:none">
                     @Html.LabelFor(model => model.modeloUsuario.lider, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.modeloUsuario.lider, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.modeloUsuario.lider, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.modeloUsuario.lider, new { htmlAttributes = new { @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.lider, "", new { @class = "text-danger" })
                 </div>
 
 
-@*Rol editable*@
+                @*Rol editable*@
                 <dt>
                     Rol
                 </dt>
@@ -112,10 +115,10 @@
                         <option value="desarr">Desarrollador</option>
                     </select>
                 </dd>
-                <div class="form-group">                    
+                <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Aceptar" class="btn btn-default" />
-                        <a class="btn btn-default" onclick="cancelar()">Cancelar</a>
+                        <input type="submit" value="Aceptar" class="btn btn-primary" />
+                        <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
                     </div>
 
                 </div>
@@ -124,106 +127,80 @@
     </div>
 @*---------------------------------------Detalles------------------------------------------------*@
     <div class="elementoEditar">
-        <a class="btn btn-default" onclick="esconderEditar()">Modificar</a>
-        <div class="col-lg-2 col-lg-push-6">
-         <a class="btn btn-default" id='@(Model.modeloUsuario.cedula)' onclick="borrar(this)">Eliminar</a>
+        <div class="form-horizontal">
+            <a class="btn btn-success" onclick="esconderEditar()">Modificar</a>
+            <div class="col-lg-2 col-lg-push-6">
+                <a class="btn btn-danger" id='@(Model.modeloUsuario.cedula)' onclick="borrar(this)">Eliminar</a>
+            </div>
+            <dl class="dl-horizontal">
+
+                @*Cedula Modificar*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
+                </div>
+
+
+                @*Nombre Modificar*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.nombre, "", new { @class = "text-danger" })
+                </div>
+
+
+                @*Apellidos Modificar*@
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.apellidos, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.apellidos, "", new { @class = "text-danger" })
+                </div>
+
+
+                @*Correo Modificar*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.correo, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.modeloUsuario.correo, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.correo, "", new { @class = "text-danger" })
+                </div>
+
+
+                @*Telefono 1 Modificar*@
+                <div class="form-group">
+                    <label class="control-label col-md-2">Telefono 1:</label>
+                    @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloUsuario.Telefono, "", new { @class = "text-danger" })
+                </div>
+
+
+                @*Telefono 2 Modificar*@
+                <div class="form-group">
+                    <label class="control-label col-md-2">Telefono 2:</label>
+                    @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloTelefono2.numero, "", new { @class = "text-danger" })
+                </div>
+                @*Proyecto Modificar, no implementado en este sprint*@
+                <div class="form-group" style="display:none">
+                    <dt>Proyecto </dt>
+                    @Html.EditorFor(model => model.modeloProyecto.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloProyecto.nombre, "", new { @class = "text-danger" })
+                </div>
+                @*Proyecto Modificar, no implementado en este sprint*@
+                <div class="form-group" style="display:none">
+                    <dt>Proyecto </dt>
+                    @Html.EditorFor(model => model.modeloProyecto.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.modeloProyecto.nombre, "", new { @class = "text-danger" })
+                </div>
+
+            </dl>
+
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
         </div>
-        <dl class="dl-horizontal">
-            @*
-                Nombre Detalles
-            *@
-            <div>
-                <dt>
-                    Nombre
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.modeloUsuario.nombre)
-                </dd>
-            </div>
-
-            @*
-                Apellidos Detalles
-            *@
-            <div>
-                <dt>
-                    Apellidos
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.modeloUsuario.apellidos)
-                </dd>
-            </div>
-            @*
-                Cedula Detalles
-            *@
-            <div>
-                <dt>
-                    Cedula
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.modeloUsuario.cedula)
-                </dd>
-            </div>
-            @*
-                Telefono 1 Detalles
-            *@
-            <div>
-                <dt>
-                    Telefono
-                </dt>
-
-                <dd>
-                    @if ( 1 <= Model.listaTelefono.Count)
-                    { 
-                        @Html.DisplayFor(model => model.listaTelefono.ElementAt(0).numero)
-                    }
-                </dd>
-            </div>
-            @*
-                Telefono 2 Detalles
-            *@
-            <div>
-                <dt>
-                    Telefono
-                </dt>
-
-                <dd>
-                    @if (1 < Model.listaTelefono.Count)
-                    {
-                        @Html.DisplayFor(model => model.listaTelefono.ElementAt(1).numero)
-                    }    
-                </dd>
-            </div>
-            @*
-                Proyecto Detalles
-            *@
-
-            <div>
-                <dt>
-                    Proyecto
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.modeloProyecto.nombre)
-                </dd>
-            </div>
-        @*
-            Rol Detalles
-        *@
-        <div>
-            <dt>
-                Rol
-            </dt>
-            <dd>
-                Administrador
-            </dd>
-        </div>
-        </dl>
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
- </div>
+    </div>
 
     <p>
     </p>
