--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model PagedList.IPagedList<ProyectoInge1.Models.HistVersiones >
+@model PagedList.IPagedList<ProyectoInge1.Models.HistVersiones>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @using Microsoft.AspNet.Identity
@@ -23,40 +23,41 @@
 
 
 
-                              @*
-        @Html.DropDownListFor(model => model.proyecto.lider, (SelectList)ViewBag.Desarrolladores, "Seleccionar Lider", new { @class = "control-label col-md-2" } );
-           @{
-            foreach (var Proj in Model )
-            {
-                        <option value=Proj.ReqFuncional.nomProyecto>
-                            @Html.DropDownListFor(, new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Fuente no asignada--", new { @class = "form-control" })
+                @*
+                    @Html.DropDownListFor(model => model.proyecto.lider, (SelectList)ViewBag.Desarrolladores, "Seleccionar Lider", new { @class = "control-label col-md-2" } );
+                       @{
+                        foreach (var Proj in Model )
+                        {
+                                    <option value=Proj.ReqFuncional.nomProyecto>
+                                        @Html.DropDownListFor(, new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Fuente no asignada--", new { @class = "form-control" })
 
-                            @Html.DropDownList("Prueba", new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Escoger un Proyecto--", new { @class = "form-control" })
-                        </option>
-            }
-        }*@
+                                        @Html.DropDownList("Prueba", new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Escoger un Proyecto--", new { @class = "form-control" })
+                                    </option>
+                        }
+                    }*@
                 <input class="btn btn-success" type="submit" value="Buscar" />
             </div>
-            <div class="col-lg-4">
+            @*<div class="col-lg-4">
                 <label class="control-label col-md-4">Requerimientos:</label>
-             @*   @{
+                @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+                @{
                     foreach (var Proj in Model)
                     {
                         <option value=Proj.ReqFuncional.nomProyecto>
                             @Html.DropDownListFor(, new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Fuente no asignada--", new { @class = "form-control" })
-                            
+
                             @Html.DropDownList("Prueba", new[] { new SelectListItem() { Text = Proj.ReqFuncional.nombre.ToString(), Value = Proj.ReqFuncional.nombre} }, "--Escoger un Requerimiento--", new { @class = "form-control" })
                         </option>
                     }
-                }*@
-                <input class="btn btn-success" type="submit" value="Buscar" />
-            </div>
-
-            <div class="col-lg-1 col-lg-pull-1">
+                }
+                            <input class="btn btn-success" type="submit" value="Buscar" />
+                        </div>
+            *@
+            <div class="col-lg-1 col-lg-push-2">
                 <a class="btn btn-info" href="../GestCambios">Mostrar Todos</a>
-            </div> 
-            <div class="col-lg-1 col-lg-pull-1">
-                <a class="btn btn-info" href="../Usuarios">Solicitudes</a>
+            </div>
+            <div class="col-lg-1 col-lg-push-4">
+                <a class="btn btn-info" href="../GestCambios/Solicitudes">Solicitudes</a>
             </div>
         </div>
     </p>
@@ -86,18 +87,18 @@
     <tbody>
         @foreach (var item in Model)
         {
-           
-            <tr id='@(item.versionRF )' onclick="gotoDetails(this)">
+
+            <tr id='@(item.versionRF+"~"+ item.idReqFunc+"~"+item.nomProyecto)' onclick="gotoVersionDetails(this)">
                 <td>
-                    @Html.DisplayFor(modelItem => item.versionRF )
-                    
+                    @Html.DisplayFor(modelItem => item.versionRF)
+
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ReqFuncional.nombre )
+                    @Html.DisplayFor(modelItem => item.ReqFuncional.nombre)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.nomProyecto )
-            </td>
+                    @Html.DisplayFor(modelItem => item.nomProyecto)
+                </td>
                 <td>
                     @{
                         var id = item.realizadoPor;
@@ -112,18 +113,18 @@
                             }
                         }
 
-                }
-                  
+                    }
+
                 </td>
 
                 <td>
                     <div class="col-lg-2 col-lg-push-5">
-                        @Html.ActionLink("Crear","Create",null,new{ nomProyecto = item.ReqFuncional.nomProyecto,versionRF = item.versionRF, idReqFunc= item.ReqFuncional.id },null)
+                        @Html.ActionLink("Crear", "Create", null, new { nomProyecto = item.ReqFuncional.nomProyecto, versionRF = item.versionRF, idReqFunc = item.ReqFuncional.id }, null)
                     </div>
                 </td>
 
-        </tr>
-                    }
+            </tr>
+                        }
     </tbody>
 </table>
 
@@ -136,7 +137,7 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.Page
 <script src="../../Scripts/jquery_Usuarios.js"></script>
 
 
-    @*
+@*
 
     @{var ProyectList = Model.listaProyectos;
         var Proyect = Model.Proyecto;
@@ -169,4 +170,4 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.Page
             </tr>
         }
 
-    *@
+*@
