--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -96,6 +96,12 @@
                         @Html.EditorFor(model => model.Requerimiento.sprint, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Requerimiento.sprint, "", new { @class = "text-danger" })
                     </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Requerimiento.imagen, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            <input type="file" id="image1" name="imagen1" />
+                        </div>
+                    </div>
                 </fieldset>
                 <fieldset name="generalinfo">
                     <legend>Criterios de aceptacion</legend>
@@ -261,7 +267,7 @@
                 }
 
             }
-        </script>
+ </script>
 
 <script type="text/javascript">
     $(function () {
